--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "JetBrainz/pfbc",
     "version": "1.0.0",
+    "stability": "stable",
     "minimum-stability": "dev",
     "license": "GNU GPL v3",
     "require": {
